Adding permissions for domain publishing

--- a/views/index.jade
+++ b/views/index.jade
@@ -1,2 +1,11 @@
 h1= title
 p Welcome to #{title}
+
+p 
+  fb:login-button(perms: "publish_stream, offline_access, manage_pages, read_insights")
+
+p
+  fb:like
+
+#fb-root
+script(src='/javascripts/global.js')
