--- a/views/layout.jade
+++ b/views/layout.jade
@@ -3,8 +3,5 @@ html
   head
     title= title
     link(rel='stylesheet', href='/stylesheets/global.css')
-    meta(property='fb:app_id', content=fb_app_id)
+    meta(id='fb-app-id', property='fb:app_id', content=fb_app_id)
   body!= body
-  fb:like
-  #fb-root
-  script(src='/javascripts/global.js')
